# ocsf-2-sqlalchemy

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
generated_models/: __init__.py  base.py
generated_models/base_models/: __init__.py  _entity.py  account.py  advisory.py  affected_code.py  affected_package.py  cis_control.py  cve.py  cvss.py  cwe.py  digital_signature.py  encryption_details.py  epss.py  feature.py  file.py  fingerprint.py  group.py  kb_article.py  key_value_object.py  ldap_person.py  metric.py  object.py  organization.py  os.py  package.py  product.py  programmatic_credential.py  remediation.py  rule.py  timespan.py  url.py  user.py  vulnerability.py
generated_models/events/: __init__.py
generated_models/metadata/: __init__.py  tables.py
generated_models/relations/: __init__.py  ocsf_account_labels.py  ocsf_account_tags.py  ocsf_advisory_references.py  ocsf_advisory_related_cves.py  ocsf_advisory_related_cwes.py  ocsf_cve_cvss.py  ocsf_cve_references.py  ocsf_cve_related_cwes.py  ocsf_cvss_metrics.py  ocsf_file_hashes.py  ocsf_file_imported_symbols.py  ocsf_file_signatures.py  ocsf_file_tags.py  ocsf_group_privileges.py  ocsf_key_value_object_values.py  ocsf_ldap_person_email_addrs.py  ocsf_ldap_person_labels.py  ocsf_ldap_person_tags.py  ocsf_remediation_cis_controls.py  ocsf_remediation_kb_article_list.py  ocsf_remediation_kb_articles.py  ocsf_remediation_references.py  ocsf_url_categories.py  ocsf_url_category_ids.py  ocsf_user_groups.py  ocsf_user_programmatic_credentials.py  ocsf_vulnerability_affected_code.py  ocsf_vulnerability_affected_packages.py  (+5 more)
src/: __init__.py
src/parser/: __init__.py  (+8 more)
tests/: __init__.py  conftest.py
(+23 files in other folders)
